# nonebot-plugin-aibot

./: README.md  pyproject.toml
nonebot_plugin_aibot/plugins/aibot/: __init__.py
nonebot_plugin_aibot/plugins/aibot/Mistral-7B-v0.1-bigdl-llm-INT4/: config.json  load_keys.json
